# SoOSiM-cli

./: LICENSE  README.md  SoOSiM-cli.cabal
src/SoOSiM/: CLI.hs
src/SoOSiM/CLI/: Args.hs  Util.hs
