name:                SoOSiM-cli
version:             0.1.1.0
synopsis:            CLI for SoOSiM
-- description:
homepage:            http://www.soos-project.eu/
license:             MIT
license-file:        LICENSE
author:              Christiaan Baaij
maintainer:          christiaan.baaij@gmail.com
copyright:           (c) 2012, S(o)OS Consortium
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10

executable SoOSiM-cli
  HS-Source-Dirs:     src
  default-language:   Haskell2010
  ghc-options:        -fwarn-tabs -main-is SoOSiM.CLI
  main-is:            SoOSiM/CLI.hs
  other-modules:      SoOSiM.CLI.Args
                      SoOSiM.CLI.Util
  build-depends:      base              >= 4.5.1.0,
                      cmdargs           >= 0.10.1,
                      containers        >= 0.4.2.1,
                      directory         >= 1.1.0.2,
                      IfElse            >= 0.85,
                      haskeline         >= 0.7.0.3,
                      mtl               >= 2.1.2,
                      SoOSiM            >= 0.2.4.0,
                      SoOSiM-components >= 0.1.0.0,
                      stm               >= 2.4.0
